--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html" style="font-size: 20px" ;>React Todo Lists</a>
-                <!--logo --><img src="logo.png" alt="task logo" style="width: 10%" ; height="10%" >
+                <a class="navbar-brand" href="index.html" title="Homepage" style="font-size: 20px" ;>React Todo Lists</a>
+                <a href="index.html" title="Homepage">
+                    <!--logo --><img src="logo.png" alt="task logo" style="width: 10%" ; height="10%">
+                </a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
