--- a/public/Todo.html
+++ b/public/Todo.html
@@ -29,12 +29,13 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li><a href="index.html" style="font-size: 20px" ;>Home</a></li>
-                    <li class="active" style="font-size: 20px" ;><a href="Todo.html">IDK</a></li>
+                    <li class="active" style="font-size: 20px" ;><a href="Todo.html">TODO Lists</a></li>
                     <li><a href="#" style="font-size: 20px" ;>Something might go here</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+    Forget this - i got rid of it also didn't copy anything haha
     <div class="body">i got the code from this place. but actually i wont say cause then youll see i didnt do it myself lol
     </div>
 </body>
