--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active" style="font-size: 20px" ;><a href="index.html">Home</a></li>
-                    <li><a href="Todo.html" style="font-size: 20px" ;>IDK</a></li>
+                    <li><a href="Todo.html" style="font-size: 20px" ;>TODO List</a></li>
                     <li><a href="#" style="font-size: 20px" ;>Something might go here</a></li>
                 </ul>
             </div>
