--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Todo List</title>
+    <title>Your Todo List</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -23,19 +23,27 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html" title="Homepage" style="font-size: 20px" ;>React Todo Lists</a>
-                <a href="index.html" title="Homepage">
+                <a class="navbar-brand" href="Todo.html" title="Homepage" style="font-size: 20px" ;>React Todo Lists</a>
+                <a href="Todo.html" title="Homepage">
                     <!--logo --><img src="logo.png" alt="task logo" style="width: 10%" ; height="10%">
                 </a>
+                
+                
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active" style="font-size: 20px" ;><a href="index.html">Home</a></li>
-                    <li><a href="Todo.html" style="font-size: 20px" ;>TODO List</a></li>
-                    <li><a href="#" style="font-size: 20px" ;>Something might go here</a></li>
+                    <li><a href="Todo.html" style="font-size: 20px" ;>Home</a></li>
+                    <li class="active" style="font-size: 20px" ;><a href="index.html">TODO Lists</a></li>
+                    <li><a href="motivation.html" style="font-size: 20px" ;>Motivation</a></li>
                 </ul>
             </div>
         </div>
+        <div id="dt">
+        <p>Date/Time: <span id="datetime"></span></p></div>
+        <script>
+var dt = new Date();
+document.getElementById("datetime").innerHTML = dt.toLocaleString();
+</script>
     </nav> <!-- todo list below in 'container' -->
     <div id="container">
 
@@ -43,3 +51,4 @@
 </body>
 
 </html>
+
