--- a/public/Todo.html
+++ b/public/Todo.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
-    <title>Todo List</title>
+    <title>Todo List Home</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="todo.css"> <!-- stylesheet is in 'src' -->
+    <link rel="stylesheet" href="todo.css"> <!-- stylesheet is in 'public' -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="icon" type="image" href="list-alt.png">
 </head>
 
 <body>
@@ -21,23 +22,32 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html" title="Homepage" style="font-size: 20px" ;>React Todo Lists</a>
-                <a href="index.html" title="Homepage">
-                    <!--logo --><img src="logo.png" alt="task logo" style="width: 10%" ; height="10%">
+                <a class="navbar-brand" href="Todo.html" title="Homepage" style="font-size: 20px" ;>React Todo Lists</a>
+                <a href="Todo.html" title="Homepage">
+                    <img src="logo.png" alt="task logo" style="width: 10%" ; height="10%">
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html" style="font-size: 20px" ;>Home</a></li>
-                    <li class="active" style="font-size: 20px" ;><a href="Todo.html">TODO Lists</a></li>
-                    <li><a href="#" style="font-size: 20px" ;>Something might go here</a></li>
+                    <li class="active" style="font-size: 20px" ;><a href="Todo.html">Home</a></li>
+                    <li><a href="index.html" style="font-size: 20px" ;>TODO Lists</a></li>
+                    <li><a href="motivation.html" style="font-size: 20px" ;>Motivation</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    Forget this - i got rid of it also didn't copy anything haha
-    <div class="body">i got the code from this place. but actually i wont say cause then youll see i didnt do it myself lol
+    <div class="body">
+        <h1>
+            <center>Weclome to the Todo Taskings app</center>
+        </h1>
+        <p>
+            <center>The program is run by a JavaScript code librairy called react.js. It is owned and developed by facebook </center>
+        </p>
+        <br>
+        <br>
+        <p><center>To start adding a task go to the TODO Lists tab, etner your task in the bar and hit 'add task' to start creating your list<br>If you no longer require an item on your list possibly because you have completed it (good on you👍) then just click<br>or tap on it to remove the item from the list.</center></p>
     </div>
+
 </body>
 
 </html>
